fix layout issues causing overflow

--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -1,6 +1,6 @@
 .dashboard {
   padding: 1rem;
-  
+  flex: 1 1 0;
   p {
     margin-top: 1rem;
     margin-bottom: 1rem;
